# notes

./: .gitignore  Jan 18 20h43.svgz  README.md  archinstall.sh  archsetup.sh  co.md  coop_games  dsa.md  foo  guitar_goals.md  guitar_todo  indie  install.sh  macinfo  mouse_sensor  one_handed_games  packages.x86_64  split_screen_games  todo  todo.md
EDC/: 01_07_24.md  ;  ideas.md  main.md  project.c
Write/: Write
coding/: output  wireless_communication.md
coding/c/cmake_tut/: CMakeLists.txt
coding/c/cmake_tut/src/: main.c
dmenu/: config.h  dmenu
dunst/: dunstrc
dwl/: attachtop.patch  client.h.orig  config.def.h  config.def.h.orig  config.def.h.rej  config.h  dim-unfocused.patch  dmenu.sh  dwl  dwl.c  dwl.c.orig  minimalborders.patch
dwm/: bar.sh  config.def.h  config.def.h.orig  config.h  dwm  dwm-attachasideandbelow-6.4.diff  dwm.c  dwm.c.orig  dwm.c.rej
emacs/: config.el  config.org  config.org~  init.el  places  trash.el
fish/: config.fish  fish_variables
foot/: foot.ini
hypr/: dmenu.sh  hyprland.conf
keyboard/: artsey.c  bar.c  final.c  foo.c  kb_map.txt  test_gpio_pin.c
mako/: config
niri/: checkBat.sh  config.kdl  dmenu.sh
nvim/: backupINIT.lua  init.lua  lazy-lock.json
opengl/: VBO.cpp  VBO.h  main.cpp  shader.vert  till_vao.cpp
pico/: framebuf.py
picom/: picom.conf
project_ideas/: index.html  style.css
refresher/: main.md
sem1/: college_notes.org  college_stuff.norg  college_stuff.org  comEndSem.norg  com_midsem_prep.org
sem2/: 2023043_Q3.cpp  2023043_Q4.cpp  bookmarks.sqlite  bst.cpp  co.md  dsa.md  isa.md  output  (+4 more)
(+5537 files in other folders)
